<resources>
    <string name="app_name">Purrsonal Trainer</string>
    <!-- Landing, Login and Register Labels -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="google_sso">Login with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resetApp">Reset App</string>
    <string name="logOut">Log Out</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome!</string>
    <string name="welcomeBack">Welcome\nBack!</string>
    <string name="firebase_web_client_id" translatable="false">859936099389-19fcm5qa1m50jqb04hot8jqbjl12oc9m.apps.googleusercontent.com</string>
    <!-- Home Labels -->
    <string name="home">Home</string>
    <string name="accountDetails">Account Details</string>
    <string name="catSettings">Cat Settings</string>
    <string name="statistics">Statistics</string>
    <string name="settingsTitle">Settings</string>
    <string name="routines">Routines</string>
    <string name="yourRoutines">Your Routines</string>
    <string name="newRoutine">New Routine</string>
    <string name="untitledRoutine">Untitled Routine</string>
    <string name="routineDetails">Routine Details</string>
    <string name="quickStart">Quick Start</string>
    <string name="workout">Workout</string>
    <string name="startEmptyWorkout">Start Empty Workout</string>
    <string name="notes">Notes</string>
    <string name="addExercises">Add Exercises</string>
    <string name="addExercise">Add Exercise</string>
    <string name="workoutType">Workout Type</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="bodyWeight">Body Weight:</string>
    <string name="yourExercises">Your Exercises</string>

    <string-array name="set_type_options">
        <item>W</item>
        <item>1</item>
        <item>F</item>
        <item>D</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="background">background</string>
    <string name="email_text_view">email text view</string>
    <string name="reset_app_button">Reset App Button</string>
    <string name="log_out_button">Log out button</string>
    <string name="done_button">Done Button</string>
    <string name="please_re_enter_your_password">Please re-enter your password</string>
    <string name="analysis">Analysis</string>
    <string name="records">Records</string>
    <string name="placeholder_rm">0 RM</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="colour">Colour</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_text_view">password text view</string>

    <string name="muscle_group_lower_back">lower back</string>
    <string name="muscle_group_biceps">biceps</string>
    <string name="muscle_group_traps">traps</string>
    <string name="muscle_group_adductors">adductors</string>
    <string name="muscle_group_abs">abs</string>
    <string name="muscle_group_middle_back">middle back</string>
    <string name="muscle_group_glutes">glutes</string>
    <string name="muscle_group_neck">neck</string>
    <string name="muscle_group_calves">calves</string>
    <string name="muscle_group_shoulders">shoulders</string>
    <string name="muscle_group_triceps">triceps</string>
    <string name="muscle_group_forearms">forearms</string>
    <string name="muscle_group_abductors">abductors</string>
    <string name="muscle_group_hamstrings">hamstrings</string>
    <string name="muscle_group_quads">quads</string>
    <string name="muscle_group_lats">lats</string>
    <string name="muscle_group_chest">chest</string>

    <string name="owned">owned</string>
    <string name="equipped">equipped</string>
    <string name="buy">Buy</string>
    <string name="equip">equip</string>
    <string name="new_password">new password</string>
    <string name="purrfect">Purrfect\nScenery</string>
    <string name="scenery">Scenery</string>
    <string name="workout_name">Workout Name</string>
    <string name="cat_settings">Cat Settings</string>
    <string name="cat_name">cat name</string>
    <string name="routine_name">Routine Name</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="paw_some">Paw-Some\nGear</string>
    <string name="gear">Gear</string>
    <string name="cat_fact">Cat Fact</string>
    <string name="next">Next</string>
    <string name="empty_workout">Empty Workout</string>
    <string name="new_routine">new routine</string>
    <string name="leg_extensions">Leg Extensions</string>
    <string name="enter_notes_here">Enter notes here</string>
    <string name="set">Set</string>
    <string name="previous">Previous</string>
    <string name="kg">kg</string>
    <string name="reps">reps</string>
    <string name="plus_set">+ Set</string>
    <string name="notes_colon">Notes:</string>
    <string name="distance_in_m">Distance in m</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="previous_distance_x_time">Previous (Distance x Time)</string>
    <string name="cookie_image">Cookie Image</string>
    <string name="harvey_s_cookies">Harvey\'s Cookies</string>
    <string name="lorem_ipsum">Lorem ipsum item description goes here</string>
    <string name="placeholder_date">August 2024</string>
    <string name="placeholder_workout_count">2 Workouts</string>
    <string name="bg_name_here">*BG Name Here*</string>
    <string name="dash_dash">--</string>
    <string name="search">Search</string>
    <string name="create_exercise">Create Exercise</string>
    <string name="date_colon">Date:</string>
    <string name="set_distribution">Set Distribution</string>
    <string name="no_data_available_for_the_selected_date_range">No data available for the selected date range.</string>
    <string name="create_category">Create Category</string>
    <string name="name">name</string>
    <string name="untitled_exercise">Untitled Exercise</string>
    <string name="are_you_sure_you_want_to_wipe_your_data_this_action_cannot_be_undone">Are you sure you want to wipe your data? This action cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="continue_word">Continue</string>
    <string name="your_original_password">your original password</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="category">Category</string>
    <string name="_1_take_a_deep_breath">1.Take a Deep Breath :)</string>
    <string name="category_name">Category Name</string>
    <string name="sets_0">Sets: 0</string>
    <string name="_30_percent">30%</string>
    <string name="fri_placeholder">fri</string>
    <string name="_45_min_placeholder">45 min</string>
    <string name="leg_day">Leg Day</string>
    <string name="_40kg_x_6_placeholder">40kg x 6</string>
    <string name="_20kg_placeholder">20kg</string>
    <string name="item_text_placeholder">Item Text</string>
    <string name="_4x_leg_extension_placeholder">4x leg extension</string>
    <string name="locked">locked</string>
    <string name="profile_setup_message">Psst! You can change this later!</string>
</resources>