<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.settings_activities.CatSettingsActivity"
    android:background="@drawable/bg_grey_gradient">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bg_cogs"
        android:alpha="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="40dp">

        <za.co.varsitycollege.st10204902.purrsonaltrainer.frontend_logic.GradientTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/accountDetails"
            android:text="Cat Settings"
            android:fontFamily="@font/knicknack_black"
            android:textSize="40sp"
            app:startColor="@color/pale_sky_blue"
            app:endColor="@color/deep_cyan_blue"
            app:strokeColor="@color/default_stroke_color"
            app:strokeWidth="15dp"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="cat name"
            android:contentDescription="@string/email_text_view"
            android:fontFamily="@font/rounded"
            android:textSize="22sp"
            android:textColor="#6B6B6B"
            android:layout_marginStart="45dp"/>

        <EditText
            android:id="@+id/cat_settings_cat_name"
            android:layout_width="match_parent"
            android:autofillHints="emailAddress"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@drawable/bg_userinput"
            android:textSize="25sp"
            android:textColor="@color/hint_text"
            android:fontFamily="@font/rounded"
            android:paddingVertical="25dp"
            android:paddingHorizontal="30dp"
            android:layout_marginHorizontal="12dp"/>

        <za.co.varsitycollege.st10204902.purrsonaltrainer.components.SwipeSelectorView
            android:id="@+id/cat_settings_cat_swipe_selector"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cat_settings_done_button"
            android:layout_width="235dp"
            android:layout_height="80dp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/svg_green_bblbtn"
            android:textSize="30sp"
            android:fontFamily="@font/knicknack_medium"
            android:textColor="@color/white"
            android:text="@string/done"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>