<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    android:layout_marginHorizontal="30dp"
    android:background="@android:color/transparent"
    android:elevation="4dp">
    <!-- Cookie Image that will overlap -->
    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cookie_image"
        android:elevation="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/placeholder_cookie"/>

    <!-- Card Content Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_userinput"
        android:padding="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Spacer to account for overlapping image -->
        <Space
            android:id="@+id/topSpacer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Title: "Harveys Cookies" -->
        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harvey_s_cookies"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="#9E9E9E"
            android:textStyle="bold"
            android:layout_marginTop="-15dp"
            app:layout_constraintTop_toBottomOf="@id/topSpacer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/knicknack_medium"/>

        <!-- Description Text -->
        <TextView
            android:id="@+id/itemDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum"
            android:textSize="24sp"
            android:textColor="#D0D0D0"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/itemName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/rounded"/>

        <!-- Price Container -->
        <LinearLayout
            android:id="@+id/priceContainer"
            android:layout_width="153dp"
            android:layout_height="143dp"
            android:layout_marginTop="1dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemDescription">

            <ImageView
                android:id="@+id/ivCoin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginBottom="5dp"
                android:elevation="3dp"
                android:src="@drawable/placeholder_coin" />

            <za.co.varsitycollege.st10204902.purrsonaltrainer.frontend_logic.GradientTextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-25dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/knicknack_medium"
                android:rotation="2"
                android:text="12"
                android:textColor="#FF6B6B"
                android:textSize="65sp"
                app:strokeColor="#EEEEEE"
                app:strokeWidth="18dp" />
        </LinearLayout>

        <!-- Action Buttons Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="-25dp"
            android:layout_marginBottom="10dp"
            android:weightSum="1"
            app:layout_constraintTop_toBottomOf="@id/priceContainer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="30dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnPurchase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:background="@drawable/svg_orange_bblbtn"
                android:elevation="5dp"
                android:fontFamily="@font/knicknack_medium"
                android:text="@string/buy"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="40sp"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>